# ccdb

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: style.yml  tests.yml
ccdb/: manage.py  next
ccdb/api/: apps.py  urls.py
ccdb/api/serializers/: account.py  contract.py  contract_item.py  customer.py  invoice.py  synced_contract_serializer.py
ccdb/api/viewsets/: contract.py  customer.py  gnom.py  invoice.py  mixins.py
ccdb/ccdb/: celery.py  urls.py  views.py  wsgi.py
ccdb/ccdb/settings/: base.py  build.py  citest.py  dev.py  production.py
ccdb/contracting/: __init__.py  admin.py  apps.py  resources.py  tasks.py
ccdb/contracting/migrations/: 0001_initial.py  0002_initial.py  0003_alter_gwcbsvertragposten_sparte.py  0004_auto_20220322_1921.py  0005_auto_20220322_1957.py  0006_auto_20220412_0501.py  0007_contract_item_last_invoice_override.py  0008_easybill_fields.py  0009_invoice_delivery.py  0010_sync_fields.py  0011_transaction_easybill_id.py  0012_auto_20220428_1148.py  0012_auto_20220429_0237.py  0013_auto_20220502_0130.py  0014_auto_20220502_0310.py  0015_merge_0012_auto_20220428_1148_0014_auto_20220502_0310.py  0016_auto_20220502_1712.py  0017_auto_20220518_0342.py  0018_auto_20220518_0342.py  0019_auto_20220518_1400.py  0020_auto_20220531_1425.py  0021_auto_20220531_1453.py  0022_auto_20220623_1558.py  0023_auto_20220623_1701.py  0024_new_contract_item_fields.py  0025_invoiceitem_is_recurring.py  0026_availability.py  0027_easybill_invoice_type_change.py
ccdb/contracting/models/: __init__.py  account.py  cbs.py  contract.py  contract_item.py  customer.py  invoice.py
ccdb/contracting/utils/: __init__.py  cbs_import.py  crm.py  easybill.py  extensions.py  history.py  invoicing.py
ccdb/globalways/: __init__.py  apps.py  model_validator.py  storages.py  tasks.py
ccdb/globalways/migrations/: 0001_initial.py  0002_gitcommit.py  0003_servicedeployment.py  0004_auto_20190924_1609.py  0005_retrytask.py  0006_auto_20200131_1744.py  0007_delete_retrytask.py  0008_retrytaskstate.py  0009_auto_20200207_1134.py  0010_activediretoryguidprofile.py  0011_auto_20200810_2229.py  0012_change_requests.py  0013_auto_20211117_1602.py  0014_auto_20220327_0432.py  0015_delete_retrytaskstate.py  (+1 more)
ccdb/gwdb/: __init__.py  apps.py  models.py
ccdb/main/: admin.py  context_processors.py  models.py  queue.py  tasks.py
ccdb/tests/: conftest.py  test_setup.py
docker/: entrypoint-celery.sh  entrypoint-celery_beat.sh  entrypoint-uwsgi.sh  uwsgi.ini
(+45 files in other folders)
